# dragai

./: Readme.md  pyproject.toml  requirements.txt  setup.py
agent/chat/: __init__.py  config.py  constants.py  index.py  manager.py  parsing.py  storage.py  structured.py
agent/chat/index/: __init__.py  base.py  manager.py
agent/chat/index/providers/: chroma.py  redis.py  type.py
agent/chat/index/retrievers/: __init__.py  auto_retreiver.py  bm25.py  custom.py  reciprocal_rank_fusion.py
agent/chat/llm/: __init__.py  base.py  manager.py
agent/chat/llm/providers/: open_source.py  openai.py
agent/chat/storage/: __init__.py  base.py  manager.py
agent/chat/storage/providers/: chroma.py  mongodb.py  redis.py
agent/crawler/: __init__.py  base.py  config.py  sitemeta.py
